--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-redux": "^6.0.6",
     "axios": "^0.18.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
     "react-scripts-ts": "2.17.0",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "server": "^1.0.18"
   },
   "scripts": {
