--- a/package.json
+++ b/package.json
@@ -21,10 +21,15 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.1.13",
     "@types/jest": "^23.3.1",
     "@types/node": "^10.7.1",
     "@types/react": "^16.4.11",
     "@types/react-dom": "^16.0.7",
+    "enzyme": "^3.5.0",
+    "enzyme-adapter-react-16": "^1.3.0",
+    "jest": "^23.5.0",
+    "react-test-renderer": "^16.4.2",
     "typescript": "^3.0.1"
   }
 }
