--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "server": "^1.0.18",
+    "styled-components": "^3.4.5",
     "typesafe-actions": "^2.0.4"
   },
   "scripts": {
