--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/googlemaps": "^3.30.12",
     "@types/react-redux": "^6.0.6",
     "axios": "^0.18.0",
     "react": "^16.4.2",
