--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "fix": "gts fix",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
-    "posttest": "npm run check"
+    "posttest": "npm run check",
+    "cf-deploy-stack": "infrastructure/scripts/cf_deploy_stack.sh"
   },
   "author": "Samuel Li",
   "license": "ISC",
