--- a/package.json
+++ b/package.json
@@ -23,17 +23,19 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "@types/googlemaps": "^3.30.13",
-    "@types/react-redux": "^6.0.6",
     "@types/enzyme": "^3.1.13",
+    "@types/googlemaps": "^3.30.13",
     "@types/jest": "^23.3.1",
     "@types/node": "^10.7.1",
     "@types/react": "^16.4.11",
     "@types/react-dom": "^16.0.7",
+    "@types/react-redux": "^6.0.6",
+    "@types/redux-mock-store": "^1.0.1",
     "enzyme": "^3.5.0",
     "enzyme-adapter-react-16": "^1.3.0",
     "jest": "^23.5.0",
     "react-test-renderer": "^16.4.2",
+    "redux-mock-store": "^1.5.3",
     "typescript": "^3.0.1"
   }
 }
