--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,7 +8,7 @@
     "react-dom": "^16.4.2",
     "react-location-picker": "^1.3.0",
     "react-redux": "^5.0.7",
-    "react-scripts-ts": "2.17.0",
+    "react-scripts": "^3.2.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "server": "^1.0.18",
@@ -16,26 +16,36 @@
     "typesafe-actions": "^2.0.4"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
     "start-local-api-server": "node src/server/server.js",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
     "@types/enzyme": "^3.1.13",
     "@types/googlemaps": "^3.30.13",
-    "@types/jest": "^23.3.1",
-    "@types/node": "^10.7.1",
-    "@types/react": "^16.4.11",
-    "@types/react-dom": "^16.0.7",
+    "@types/node": "^10.17.5",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.4",
     "@types/react-redux": "^6.0.6",
     "@types/redux-mock-store": "^1.0.1",
     "enzyme": "^3.5.0",
     "enzyme-adapter-react-16": "^1.3.0",
-    "jest": "^23.5.0",
     "react-test-renderer": "^16.4.2",
     "redux-mock-store": "^1.5.3",
-    "typescript": "^3.0.1"
+    "typescript": "^3.7.2"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
