--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "root",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "devDependencies": {
     "lerna": "^3.18.4"
+  },
+  "scripts": {
+    "bootstrap": "lerna bootstrap --use-workspaces"
   }
 }
