--- a/packages/api/infrastructure/sam.yaml
+++ b/packages/api/infrastructure/sam.yaml
@@ -20,7 +20,7 @@ Resources:
     Properties:
       CodeUri: ../dist
       Handler: index.handler
-      Runtime: nodejs8.10
+      Runtime: nodejs12.x
       MemorySize: 128
       Timeout: 30 # seconds, 300 max
       Environment:
