--- a/packages/ui-infra/package.json
+++ b/packages/ui-infra/package.json
@@ -18,9 +18,22 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk:synth:test": "CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk synth",
-    "cdk:deploy:test": "CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk deploy",
-    "cdk:destroy:test": "CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk destroy"
+    "synth:ui:test": "npm run build && CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk synth --app dist/main.js",
+    "deploy:ui:test": "CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk deploy --app dist/main.js",
+    "destroy:ui:test": "CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk destroy --app dist/main.js",
+    "synth:api:test": "npm run build && CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk synth --app dist/api-infra.js --no-staging",
+    "deploy:api:test": "CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk deploy --app dist/api-infra.js",
+    "destroy:api:test": "CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk destroy --app dist/api-infra.js"
+  },
+  "devDependencies": {
+    "aws-cdk": "^1.18.0",
+    "@aws-cdk/assert": "^1.18.0",
+    "@types/jest": "^24.0.22",
+    "@types/node": "10.17.5",
+    "jest": "^24.9.0",
+    "ts-jest": "^24.1.0",
+    "ts-node": "^8.1.0",
+    "typescript": "~3.7.2"
   },
   "dependencies": {
     "@aws-cdk/aws-certificatemanager": "^1.17.1",
