--- a/packages/infrastructure/package.json
+++ b/packages/infrastructure/package.json
@@ -21,7 +21,7 @@
     "synth:ui:test": "npm run build && CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk synth --app dist/main.js",
     "deploy:ui:test": "CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk deploy --app dist/main.js",
     "destroy:ui:test": "CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk destroy --app dist/main.js",
-    "synth:api:test": "npm run build && CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk synth --app dist/api-infra.js --no-staging",
+    "synth:api:test": "npm run build && CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk synth --app dist/api-infra.js",
     "deploy:api:test": "CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk deploy --app dist/api-infra.js",
     "destroy:api:test": "CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk destroy --app dist/api-infra.js"
   },
