--- a/packages/api/cdk.out/asset.859c26bc80c4e7bd2d2ccd27ff58d9c082e896fbb8a99c75210258fd5946495f/package.json
+++ b/packages/api/cdk.out/asset.859c26bc80c4e7bd2d2ccd27ff58d9c082e896fbb8a99c75210258fd5946495f/package.json
@@ -15,7 +15,7 @@
     "prepare": "npm run compile",
     "pretest": "npm run compile",
     "posttest": "npm run check",
-    "package": "rm -r ./dist && npm run compile && infrastructure/scripts/package.sh",
+    "package": "npm run compile && infrastructure/scripts/package.sh",
     "cf-deploy-stack": "infrastructure/scripts/cf_deploy_stack.sh",
     "synth:api:test": "npm run package && CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk synth --app dist/infrastructure/api-infra.js",
     "deploy:api:test": "CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk deploy --app dist/infrastructure/api-infra.js",
@@ -29,21 +29,22 @@
     "aws-cdk": "^1.18.0",
     "@aws-cdk/assert": "^1.18.0",
     "@types/jest": "^24.0.22",
+    "@types/node": "10.17.5",
     "jest": "^24.9.0",
     "ts-jest": "^24.1.0",
     "ts-node": "^8.1.0",
-    "@types/node": "^12.12.11",
-    "typescript": "~3.7.2",
+    "typescript": "~3.7.2"
+  },
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "axios": "^0.18.0",
+    "source-map-support": "^0.5.16",
     "@aws-cdk/aws-certificatemanager": "^1.17.1",
     "@aws-cdk/aws-route53": "^1.17.1",
     "@aws-cdk/aws-route53-targets": "^1.17.1",
     "@aws-cdk/aws-s3": "^1.17.1",
     "@aws-cdk/aws-s3-deployment": "^1.17.1",
-    "@aws-cdk/core": "^1.17.1"
-  },
-  "dependencies": {
-    "dotenv": "^8.2.0",
-    "axios": "^0.18.0",
-    "source-map-support": "^0.5.16"
+    "@aws-cdk/core": "^1.17.1",
+    "@types/node": "^12.12.11"
   }
 }
