--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -5,7 +5,8 @@
     "outDir": "dist",
     "target": "es2017",
     "lib": ["es2017"],
-    "typeRoots": ["node_modules/@types"]
+    "typeRoots": ["node_modules/@types"],
+    "types": ["node"],
   },
   "include": [
     "src/*.ts",
