--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -19,7 +19,9 @@
     "cf-deploy-stack": "infrastructure/scripts/cf_deploy_stack.sh",
     "synth:api:test": "npm run package && CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk synth --app dist/infrastructure/api-infra.js",
     "deploy:api:test": "CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk deploy --app dist/infrastructure/api-infra.js",
-    "destroy:api:test": "CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk destroy --app dist/infrastructure/api-infra.js"
+    "destroy:api:test": "CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk destroy --app dist/infrastructure/api-infra.js",
+    "synth:api:test-no-staging": "npm run package && CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk synth --app dist/infrastructure/api-infra.js --no-staging > ~/tmp/template.yaml",
+    "invoke": "npm run synth:api:test-no-staging && sam local invoke 'weatherApiFunction4ABE91DF' --template ~/tmp/template.yaml -e test/data/events/apigateway-event.json"
   },
   "author": "Samuel Li <samli@samuelli.net>",
   "license": "ISC",
