--- a/packages/infrastructure/package.json
+++ b/packages/infrastructure/package.json
@@ -23,23 +23,23 @@
     "destroy:ui:test": "CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk destroy --app dist/main.js"
   },
   "devDependencies": {
-    "aws-cdk": "^1.18.0",
     "@aws-cdk/assert": "^1.18.0",
-    "@types/jest": "^24.0.22",
-    "@types/node": "10.17.5",
-    "jest": "^24.9.0",
-    "ts-jest": "^24.1.0",
-    "ts-node": "^8.1.0",
-    "typescript": "~3.7.2"
-  },
-  "dependencies": {
     "@aws-cdk/aws-certificatemanager": "^1.17.1",
     "@aws-cdk/aws-route53": "^1.17.1",
     "@aws-cdk/aws-route53-targets": "^1.17.1",
     "@aws-cdk/aws-s3": "^1.17.1",
     "@aws-cdk/aws-s3-deployment": "^1.17.1",
     "@aws-cdk/core": "^1.17.1",
+    "@types/jest": "^24.0.22",
     "@types/node": "^12.12.11",
+    "aws-cdk": "^1.18.0",
+    "jest": "^24.9.0",
+    "ts-jest": "^24.1.0",
+    "ts-node": "^8.1.0",
+    "typescript": "~3.7.2"
+  },
+  "dependencies": {
+    "@mobileposse/auto-delete-bucket": "^1.9.0",
     "dotenv": "^8.2.0",
     "source-map-support": "^0.5.16"
   },
