moved  cdk infrastructure code for ui to ui package

--- a/packages/ui/.gitignore
+++ b/packages/ui/.gitignore
@@ -84,3 +84,10 @@ fabric.properties
 
 # Editor-based Rest Client
 .idea/httpRequests
+
+# CDK asset staging directory
+.cdk.staging
+cdk.out
+/build-infra
+.env
+.env.infra*
