--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,7 +22,14 @@
     "build:test": "env-cmd -f .env.test react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "start-local-api-server": "node src/server/server.js",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build-infra": "tsc --project src/infrastructure/",
+    "watch-infra": "tsc -w --outDir build-infra src/infrastructure/*",
+    "test-infra": "jest",
+    "synth:ui:test": "npm run build-infra && CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk synth --app build-infra/main.js",
+    "deploy:ui:test": "npm run build-infra && CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk deploy --app build-infra/main.js",
+    "destroy:ui:test": "npm run build-infra && CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk destroy --app build-infra/main.js",
+    "diff:ui:test": "npm run build-infra && CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk diff --app build-infra/main.js"
   },
   "devDependencies": {
     "@types/enzyme": "^3.1.13",
@@ -36,7 +43,17 @@
     "enzyme-adapter-react-16": "^1.3.0",
     "react-test-renderer": "^16.4.2",
     "redux-mock-store": "^1.5.3",
-    "typescript": "^3.7.2"
+    "typescript": "^3.7.2",
+    "@aws-cdk/assert": "^1.18.0",
+    "@aws-cdk/aws-certificatemanager": "^1.17.1",
+    "@aws-cdk/aws-route53": "^1.17.1",
+    "@aws-cdk/aws-route53-targets": "^1.17.1",
+    "@aws-cdk/aws-s3": "^1.17.1",
+    "@aws-cdk/aws-s3-deployment": "^1.17.1",
+    "@aws-cdk/core": "^1.17.1",
+    "dotenv": "^8.2.0",
+    "@mobileposse/auto-delete-bucket": "^1.9.0",
+    "source-map-support": "^0.5.16"
   },
   "browserslist": {
     "production": [
