--- a/packages/ui/src/infrastructure/tsconfig.json
+++ b/packages/ui/src/infrastructure/tsconfig.json
@@ -19,14 +19,11 @@
     "strictPropertyInitialization":false,
     "typeRoots": ["./node_modules/@types"],
     "types": ["node"],
-    // "paths": {
-    //   "@ui/*": ["packages/ui/*"]
-    // }
-    "outDir": "dist",
+    "outDir": "../../build-infra"
   },
   "exclude": [
     "cdk.out",
     "node_modules",
-    "dist"
+    "../../build-infra"
   ]
 }
