--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -16,14 +16,15 @@
     "prepare": "npm run compile",
     "pretest": "npm run compile",
     "posttest": "npm run check",
+    "build": "npm run package",
     "package": "rm -rf ./dist && npm run compile && infrastructure/scripts/package.sh",
-    "synth:api:test": "npm run package && CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk synth --app dist/infrastructure/api-infra.js",
-    "deploy:api:test": "npm run package && CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk deploy --app dist/infrastructure/api-infra.js",
-    "diff:api:test": "npm run package && CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk diff --app dist/infrastructure/api-infra.js",
-    "destroy:api:test": "CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk destroy --app dist/infrastructure/api-infra.js",
-    "synth:api:test-no-staging": "mkdir -p ./tmp && npm run package && CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk synth --app dist/infrastructure/api-infra.js --no-staging |tee  ./tmp/cf_template_from_cdk.yaml",
+    "synth:api": "npm run package && CDK_STACK_NAME=$npm_config_stack_name CDK_STACK_ENV=$npm_config_env AWS_PROFILE=samuelli-$npm_config_env cdk synth --app dist/infrastructure/api-infra.js",
+    "deploy:api": "npm run package && CDK_STACK_NAME=$npm_config_stack_name CDK_STACK_ENV=$npm_config_env AWS_PROFILE=samuelli-$npm_config_env cdk deploy --app dist/infrastructure/api-infra.js",
+    "diff:api": "npm run package && CDK_STACK_NAME=$npm_config_stack_name CDK_STACK_ENV=$npm_config_env AWS_PROFILE=samuelli-$npm_config_env cdk diff --app dist/infrastructure/api-infra.js",
+    "destroy:api": "CDK_STACK_NAME=$npm_config_stack_name CDK_STACK_ENV=$npm_config_env AWS_PROFILE=samuelli-$npm_config_env cdk destroy --app dist/infrastructure/api-infra.js",
+    "synth:api:no-staging": "mkdir -p ./tmp && npm run package && CDK_STACK_NAME=$npm_config_stack_name CDK_STACK_ENV=$npm_config_env AWS_PROFILE=samuelli-$npm_config_env cdk synth --app dist/infrastructure/api-infra.js --no-staging |tee  ./tmp/cf_template_from_cdk.yaml",
     "//": "The function name 'weatherApiFunction4ABE91DF' is extracted from cdk synth output MANUALLY. See the CDK code for more details.",
-    "invoke": "npm run synth:api:test-no-staging && sam local invoke 'weatherApiFunction4ABE91DF' --template ./tmp/cf_template_from_cdk.yaml -e test/data/events/apigateway-event.json"
+    "invoke": "npm run synth:api:no-staging --env=test && sam local invoke 'weatherApiFunction4ABE91DF' --template ./tmp/cf_template_from_cdk.yaml -e test/data/events/apigateway-event.json"
   },
   "author": "Samuel Li <samli@samuelli.net>",
   "license": "ISC",
