--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -18,18 +18,17 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "build:test": "env-cmd -f .env.test react-scripts build",
+    "build": "env-cmd -f .env.$npm_config_env react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "start-local-api-server": "node src/server/server.js",
     "eject": "react-scripts eject",
     "build-infra": "tsc --project src/infrastructure/",
     "watch-infra": "tsc -w --outDir build-infra src/infrastructure/*",
     "test-infra": "jest",
-    "synth:ui:test": "npm run build-infra && CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk synth --app build-infra/main.js",
-    "deploy:ui:test": "npm run build-infra && CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk deploy --app build-infra/main.js",
-    "destroy:ui:test": "npm run build-infra && CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk destroy --app build-infra/main.js",
-    "diff:ui:test": "npm run build-infra && CDK_STACK_ENV=test AWS_PROFILE=samuelli-test cdk diff --app build-infra/main.js"
+    "synth:ui": "npm run build-infra && CDK_STACK_NAME=$npm_config_stack_name CDK_STACK_ENV=$npm_config_env AWS_PROFILE=samuelli-$npm_config_env cdk synth --app build-infra/main.js",
+    "deploy:ui": "npm run build-infra && CDK_STACK_NAME=$npm_config_stack_name CDK_STACK_ENV=$npm_config_env AWS_PROFILE=samuelli-$npm_config_env cdk deploy --app build-infra/main.js",
+    "destroy:ui": "npm run build-infra && CDK_STACK_NAME=$npm_config_stack_name CDK_STACK_ENV=$npm_config_env AWS_PROFILE=samuelli-$npm_config_env cdk destroy --app build-infra/main.js",
+    "diff:ui": "npm run build-infra && CDK_STACK_NAME=$npm_config_stack_name CDK_STACK_ENV=$npm_config_env AWS_PROFILE=samuelli-$npm_config_env cdk diff --app build-infra/main.js"
   },
   "devDependencies": {
     "@types/enzyme": "^3.1.13",
