added option to specify stack-name-suffix

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -18,11 +18,11 @@
     "posttest": "npm run check",
     "build": "npm run package",
     "package": "rm -rf ./dist && npm run compile && infrastructure/scripts/package.sh",
-    "synth:api": "CDK_STACK_NAME=$npm_config_stack_name CDK_STACK_ENV=$npm_config_env AWS_PROFILE=samuelli-$npm_config_env cdk synth --app='npx ts-node src/infrastructure/api-infra.ts'",
-    "deploy:api": "CDK_STACK_NAME=$npm_config_stack_name CDK_STACK_ENV=$npm_config_env AWS_PROFILE=samuelli-$npm_config_env cdk deploy --app='npx ts-node src/infrastructure/api-infra.ts'",
-    "diff:api": "CDK_STACK_NAME=$npm_config_stack_name CDK_STACK_ENV=$npm_config_env AWS_PROFILE=samuelli-$npm_config_env cdk diff --app='npx ts-node src/infrastructure/api-infra.ts'",
-    "destroy:api": "CDK_STACK_NAME=$npm_config_stack_name CDK_STACK_ENV=$npm_config_env AWS_PROFILE=samuelli-$npm_config_env cdk destroy --app='npx ts-node src/infrastructure/api-infra.ts'",
-    "synth:api:no-staging": "mkdir -p ./tmp && npm run package && CDK_STACK_NAME=$npm_config_stack_name CDK_STACK_ENV=$npm_config_env AWS_PROFILE=samuelli-$npm_config_env cdk synth --app='npx ts-node src/infrastructure/api-infra.ts' --no-staging |tee ./tmp/cf_template_from_cdk.yaml",
+    "synth:api": "CDK_STACK_NAME_SUFFIX=$npm_config_stack_name_suffix CDK_STACK_ENV=$npm_config_env AWS_PROFILE=samuelli-$npm_config_env cdk synth --app='npx ts-node src/infrastructure/main.ts'",
+    "deploy:api": "CDK_STACK_NAME_SUFFIX=$npm_config_stack_name_suffix CDK_STACK_ENV=$npm_config_env AWS_PROFILE=samuelli-$npm_config_env cdk deploy --app='npx ts-node src/infrastructure/main.ts'",
+    "diff:api": "CDK_STACK_NAME_SUFFIX=$npm_config_stack_name_suffix CDK_STACK_ENV=$npm_config_env AWS_PROFILE=samuelli-$npm_config_env cdk diff --app='npx ts-node src/infrastructure/main.ts'",
+    "destroy:api": "CDK_STACK_NAME_SUFFIX=$npm_config_stack_name_suffix CDK_STACK_ENV=$npm_config_env AWS_PROFILE=samuelli-$npm_config_env cdk destroy --app='npx ts-node src/infrastructure/main.ts'",
+    "synth:api:no-staging": "mkdir -p ./tmp && npm run package && CDK_STACK_NAME_SUFFIX=$npm_config_stack_name_suffix CDK_STACK_ENV=$npm_config_env AWS_PROFILE=samuelli-$npm_config_env cdk synth --app='npx ts-node src/infrastructure/main.ts' --no-staging |tee ./tmp/cf_template_from_cdk.yaml",
     "//": "The function name 'weatherApiFunction4ABE91DF' is extracted from cdk synth output MANUALLY. See the CDK code for more details.",
     "invoke": "npm run synth:api:no-staging --env=test && sam local invoke 'weatherApiFunction4ABE91DF' --template ./tmp/cf_template_from_cdk.yaml -e test/data/events/apigateway-event.json"
   },
