--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nivo/line": "^0.61.1",
     "axios": "^0.18.0",
     "env-cmd": "^10.0.1",
     "react": "^16.4.2",
